Add ability to poll device status
Added the ability to poll for sleep status and the currently displayed sequence number.
fix #22

--- a/src/RgbLedSequencerLibrary/Properties/Resources.resx
+++ b/src/RgbLedSequencerLibrary/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="ContinueComplete" xml:space="preserve">
     <value>Continue command sent.</value>
   </data>
+  <data name="GetStatusComplete" xml:space="preserve">
+    <value>Get status successful.</value>
+  </data>
   <data name="HandshakeProgress" xml:space="preserve">
     <value>Performing handshake with device.</value>
   </data>
